# set_log

./: README.md  main.py  pyproject.toml  set_table_log.txt
set_log/: __init__.py
