[tool.poetry]
name = "set-log"
version = "0.1.0"
description = ""
authors = ["Koki Takahashi <hakatasiloving@gmail.com>"]
readme = "README.md"
packages = [{include = "set_log"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
